; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-libfdk/extr_obs-libfdk.c_libfdk_get_error.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-libfdk/extr_obs-libfdk.c_libfdk_get_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"No error\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"Invalid handle\00", align 1
@.str.2 = private unnamed_addr constant [24 x i8] c"Memory allocation error\00", align 1
@.str.3 = private unnamed_addr constant [22 x i8] c"Unsupported parameter\00", align 1
@.str.4 = private unnamed_addr constant [15 x i8] c"Invalid config\00", align 1
@.str.5 = private unnamed_addr constant [21 x i8] c"Initialization error\00", align 1
@.str.6 = private unnamed_addr constant [33 x i8] c"AAC library initialization error\00", align 1
@.str.7 = private unnamed_addr constant [33 x i8] c"SBR library initialization error\00", align 1
@.str.8 = private unnamed_addr constant [39 x i8] c"Transport library initialization error\00", align 1
@.str.9 = private unnamed_addr constant [38 x i8] c"Metadata library initialization error\00", align 1
@.str.10 = private unnamed_addr constant [15 x i8] c"Encoding error\00", align 1
@.str.11 = private unnamed_addr constant [12 x i8] c"End of file\00", align 1
@.str.12 = private unnamed_addr constant [14 x i8] c"Unknown error\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @libfdk_get_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @libfdk_get_error(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %17 [
    i32 129, label %5
    i32 131, label %6
    i32 130, label %7
    i32 128, label %8
    i32 132, label %9
    i32 136, label %10
    i32 137, label %11
    i32 134, label %12
    i32 133, label %13
    i32 135, label %14
    i32 138, label %15
    i32 139, label %16
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %18

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %18

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %18

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %18

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %18

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %18

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %18

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %18

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %18

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %18

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.10, i64 0, i64 0), i8** %2, align 8
  br label %18

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.11, i64 0, i64 0), i8** %2, align 8
  br label %18

17:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.12, i64 0, i64 0), i8** %2, align 8
  br label %18

18:                                               ; preds = %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %19 = load i8*, i8** %2, align 8
  ret i8* %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
